// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`System should call system's emitplatform correctly 1`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2398260027.0750 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly for several platforms 1`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "6025778.9625 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2398260027.0750 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 1`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2398260027.0750 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 2`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 3`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2398260027.0750 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 4`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 5`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2446225227.6165 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 6`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 7`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2496109036.1797 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 8`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 9`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2548026569.2458 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 10`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 11`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2602102152.6147 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 12`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 13`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2658470242.3365 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 14`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 15`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2717276456.1554 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 16`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 17`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2778678730.9368 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 18`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 19`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2842848624.0249 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 20`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 21`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2909972779.3995 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 22`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 23`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2980254582.9549 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 24`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 25`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3053916035.3251 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 26`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 27`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3131199875.5530 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 28`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 29`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3212371994.7188 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 30`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 31`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3297724185.5963 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 32`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 33`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3387577282.7539 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 34`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 35`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3482284757.5562 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 36`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 37`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3582236844.6441 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 38`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 39`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3687865291.1469 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 40`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 41`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3799648837.7108 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 42`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 43`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3918119562.1593 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 44`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 45`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "4043870243.1819 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 46`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 47`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "4177562934.0750 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 48`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 49`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "4319938976.7495 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 50`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 51`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "4471830735.9148 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 52`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 53`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "4634175395.0324 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 54`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 55`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "4808031232.4918 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 56`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 57`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "4994596892.6206 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 58`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 59`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "5195234286.9425 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 60`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 61`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "5411495913.5016 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 62`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 63`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "5645157575.1760 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 64`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 65`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "5898257723.6841 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 66`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 67`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "6173144970.2328 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 68`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 69`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "6472535707.4286 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 70`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 71`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "6799584308.1264 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 72`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 73`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "7157969042.7635 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 74`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 75`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "7551997737.8647 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 76`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 77`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "7986738353.0949 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 78`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 79`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "8468181175.4271 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 80`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 81`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "9003441343.9081 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 82`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 83`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "9601013102.2015 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 84`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 85`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "10271090770.8802 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 86`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 87`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "11025976274.6144 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 88`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 89`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "11880599623.2434 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 90`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 91`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "12853187695.5292 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 92`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 93`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "13966128953.0513 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 94`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 95`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "15247098663.8822 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 96`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 97`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "16730532771.1243 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 98`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times 99`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "18459571487.3543 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times 100`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 1`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2398260027.0750 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "6025778.9625 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 2`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 3`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2398260027.0750 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "6025778.9625 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 4`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 5`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2398260027.0750 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "6146294.5417 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 6`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 7`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2302204289.7895 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "95930401.0830 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "6271630.7442 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 8`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 9`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2494190428.1580 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "6402076.8072 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 10`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 11`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2294519325.6055 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "199535234.2526 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "6537945.1071 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 12`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 13`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2597795261.3276 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "6679573.4732 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 14`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 15`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2285912075.6622 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "311735431.3593 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "6827327.7793 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 16`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 17`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2709995458.4343 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "6981604.8516 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 18`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 19`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2276234954.1976 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "433599273.3495 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "7142835.7388 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 20`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 21`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2831859300.4245 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "7311489.3955 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 22`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 23`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2265310852.8935 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "566371860.0849 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "7488076.8416 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 24`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 25`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2964631887.1599 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "7673155.8677 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 26`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 27`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2252926053.7385 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "711511652.9184 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "7867336.3707 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 28`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 29`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3109771679.9934 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "8071286.4189 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 30`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 31`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2238821156.8543 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "870736070.3982 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "8285739.1598 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 32`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 33`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3268996097.4732 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "8511500.7104 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 34`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 35`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2222679387.8024 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1046078751.1914 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "8749459.1898 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 36`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 37`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3444338778.2664 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "9000595.0870 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 38`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 39`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2204111419.9837 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1239961960.1759 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "9265993.1938 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 40`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 41`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3638221987.2509 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "9546856.3761 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 42`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 43`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2182635527.2137 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1455288794.9004 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "9844521.5129 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 44`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 45`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3853548821.9754 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "10160477.9979 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 46`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 47`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2157651429.0225 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1695561481.6692 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "10496389.2816 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 48`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 49`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "4093821508.7442 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "10854118.0320 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 50`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 51`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2128405546.9611 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1965034324.1972 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "11235755.6179 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 52`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 53`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "4363294351.2722 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "11643656.7714 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 54`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 55`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2093944464.8985 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2268913062.6615 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "12080480.4836 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 56`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 57`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "4667173089.7365 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "12549238.4236 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 58`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 59`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2053052045.4280 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2613616930.2524 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "13053352.4797 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 60`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 61`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "5011876957.3274 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "13596723.4007 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 62`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 63`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "2004163693.3288 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3007126174.3964 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "14183813.0029 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 64`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 65`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "5405386201.4714 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "14819743.0243 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 66`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 67`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1945248361.0559 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3459447168.9417 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "15510414.4981 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 68`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 69`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "5857707196.0167 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "16262652.5312 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 70`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 71`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1873644572.5728 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "3983240893.2914 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "17084382.6837 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 72`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 73`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "6381500920.3664 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "17984846.8411 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 74`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 75`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1785830235.8556 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "4594680662.6638 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "18974868.6881 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 76`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 77`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "6992940689.7388 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "20067181.7917 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 78`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 79`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1677096110.2048 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "5314634924.2015 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "21276837.1242 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 80`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 81`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "7712894951.2765 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "22621711.9194 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 82`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 83`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1541077553.6767 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "6170315961.0212 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "24123148.4980 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 84`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 85`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "8568575988.0962 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "25806760.7309 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 86`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 87`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1369075460.8498 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "7197603830.0008 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "27703457.9765 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 88`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 89`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "9595863857.0758 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "29850752.8223 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 90`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 91`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "1149059974.2253 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "8444360194.2267 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "32294441.4461 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 92`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 93`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "10842620221.3017 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "35090776.2640 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 94`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 95`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "864191100.8427 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "9975210603.5976 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "38309293.1254 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 96`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 97`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "12373470630.6726 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "42036514.5004 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 98`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should call system's emitplatform correctly several times for several platforms 99`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "490594506.8444 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "11878531805.4457 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "46380832.8829 SNAX",
      },
    ],
  },
]
`;

exports[`System should call system's emitplatform correctly several times for several platforms 100`] = `
Object {
  "more": false,
  "rows": Array [],
}
`;

exports[`System should claim rewards 1`] = `
Array [
  Object {
    "is_active": 1,
    "location": 0,
    "owner": "snax",
    "producer_key": "SNAX8mo3cUJW1Yy1GGxQfexWGN7QPUB2rXccQP7brrpgJXGjiw6gKR",
    "unpaid_blocks": 0,
    "url": "https://snax.one",
  },
]
`;

exports[`System should claim rewards 2`] = `
Array [
  Object {
    "is_proxy": 0,
    "owner": "snax.creator",
    "producers": Array [],
    "proxied_vote_weight": "0.00000000000000000",
    "proxy": "",
    "staked": 100000000,
  },
  Object {
    "is_proxy": 0,
    "owner": "snax.team",
    "producers": Array [
      "snax",
    ],
    "proxied_vote_weight": "0.00000000000000000",
    "proxy": "",
    "staked": "149999990000000",
  },
]
`;

exports[`System should claim rewards 3`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
]
`;

exports[`System should claim rewards 4`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "6.0000 SNAX",
      },
    ],
  },
]
`;

exports[`System should fail to vote for non-unique producers 1`] = `"assertion failure with message: producers must be unique"`;

exports[`System should fail to vote for non-unique producers 2`] = `
Array [
  Object {
    "is_active": 1,
    "location": 0,
    "owner": "snax",
    "producer_key": "SNAX8mo3cUJW1Yy1GGxQfexWGN7QPUB2rXccQP7brrpgJXGjiw6gKR",
    "unpaid_blocks": 0,
    "url": "https://snax.one",
  },
  Object {
    "is_active": 1,
    "location": 0,
    "owner": "testacc1",
    "producer_key": "SNAX8mo3cUJW1Yy1GGxQfexWGN7QPUB2rXccQP7brrpgJXGjiw6gKR",
    "unpaid_blocks": 0,
    "url": "https://snax.one",
  },
  Object {
    "is_active": 1,
    "location": 0,
    "owner": "testacc2",
    "producer_key": "SNAX8mo3cUJW1Yy1GGxQfexWGN7QPUB2rXccQP7brrpgJXGjiw6gKR",
    "unpaid_blocks": 0,
    "url": "https://snax.one",
  },
]
`;

exports[`System should fail to vote for non-unique producers 3`] = `
Array [
  Object {
    "is_proxy": 0,
    "owner": "snax.creator",
    "producers": Array [],
    "proxied_vote_weight": "0.00000000000000000",
    "proxy": "",
    "staked": 100000000,
  },
  Object {
    "is_proxy": 0,
    "owner": "snax.team",
    "producers": Array [],
    "proxied_vote_weight": "0.00000000000000000",
    "proxy": "",
    "staked": "149999990000000",
  },
]
`;

exports[`System should initialize system correctly 1`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "500000000.0000 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "499979825.7603 SNAX",
      },
    ],
  },
]
`;

exports[`System should send correct amounts to special accounts after initialization 1`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "499979825.7603 SNAX",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "500000000.0000 SNAX",
      },
    ],
  },
]
`;

exports[`System should set platforms 1`] = `
Object {
  "cpu_weight": 15000000,
  "net_weight": 10000000,
  "ram_quota": 1018492,
}
`;

exports[`System should set platforms 2`] = `
Object {
  "cpu_weight": 15000000,
  "net_weight": 10000000,
  "ram_quota": 1018492,
}
`;

exports[`System should set platforms 3`] = `
Object {
  "cpu_weight": 15000000,
  "net_weight": 10000000,
  "ram_quota": 1018492,
}
`;

exports[`System should set platforms 4`] = `
Object {
  "cpu_weight": 1000000,
  "net_weight": 1000000,
  "ram_quota": 900000,
}
`;

exports[`System should set platforms 5`] = `
Object {
  "cpu_weight": 10000,
  "net_weight": 1000000,
  "ram_quota": 1000000,
}
`;

exports[`System should set platforms 6`] = `
Object {
  "cpu_weight": 70000,
  "net_weight": 1000000,
  "ram_quota": 1100000,
}
`;

exports[`System should vote for producers and claim rewards 1`] = `
Array [
  Object {
    "is_active": 1,
    "location": 0,
    "owner": "snax",
    "producer_key": "SNAX8mo3cUJW1Yy1GGxQfexWGN7QPUB2rXccQP7brrpgJXGjiw6gKR",
    "unpaid_blocks": 0,
    "url": "https://snax.one",
  },
  Object {
    "is_active": 1,
    "location": 0,
    "owner": "testacc1",
    "producer_key": "SNAX8mo3cUJW1Yy1GGxQfexWGN7QPUB2rXccQP7brrpgJXGjiw6gKR",
    "unpaid_blocks": 0,
    "url": "https://snax.one",
  },
  Object {
    "is_active": 1,
    "location": 0,
    "owner": "testacc2",
    "producer_key": "SNAX8mo3cUJW1Yy1GGxQfexWGN7QPUB2rXccQP7brrpgJXGjiw6gKR",
    "unpaid_blocks": 0,
    "url": "https://snax.one",
  },
]
`;

exports[`System should vote for producers and claim rewards 2`] = `
Array [
  Object {
    "is_proxy": 0,
    "owner": "snax.creator",
    "producers": Array [],
    "proxied_vote_weight": "0.00000000000000000",
    "proxy": "",
    "staked": 100000000,
  },
  Object {
    "is_proxy": 0,
    "owner": "snax.team",
    "producers": Array [
      "",
      "",
      "",
      "",
      "snax",
      "testacc1",
      "testacc2",
    ],
    "proxied_vote_weight": "0.00000000000000000",
    "proxy": "",
    "staked": "149999990000000",
  },
]
`;

exports[`System should vote for producers and claim rewards 3`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
]
`;

exports[`System should vote for producers and claim rewards 4`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "balance": "6.0000 SNAX",
      },
    ],
  },
]
`;

exports[`System should vote for producers and claim rewards 5`] = `
Array [
  Object {
    "is_active": 1,
    "location": 0,
    "owner": "snax",
    "producer_key": "SNAX8mo3cUJW1Yy1GGxQfexWGN7QPUB2rXccQP7brrpgJXGjiw6gKR",
    "unpaid_blocks": 0,
    "url": "https://snax.one",
  },
  Object {
    "is_active": 1,
    "location": 0,
    "owner": "testacc1",
    "producer_key": "SNAX8mo3cUJW1Yy1GGxQfexWGN7QPUB2rXccQP7brrpgJXGjiw6gKR",
    "unpaid_blocks": 0,
    "url": "https://snax.one",
  },
  Object {
    "is_active": 1,
    "location": 0,
    "owner": "testacc2",
    "producer_key": "SNAX8mo3cUJW1Yy1GGxQfexWGN7QPUB2rXccQP7brrpgJXGjiw6gKR",
    "unpaid_blocks": 0,
    "url": "https://snax.one",
  },
]
`;

exports[`System should vote for producers and claim rewards 6`] = `
Array [
  Object {
    "is_proxy": 0,
    "owner": "snax.creator",
    "producers": Array [],
    "proxied_vote_weight": "0.00000000000000000",
    "proxy": "",
    "staked": 100000000,
  },
  Object {
    "is_proxy": 0,
    "owner": "snax.team",
    "producers": Array [
      "",
      "",
      "snax",
      "testacc1",
      "testacc2",
    ],
    "proxied_vote_weight": "0.00000000000000000",
    "proxy": "",
    "staked": "149999990000000",
  },
]
`;

exports[`System should work correctly with delegatebw system after initialization 1`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "1000.0000 SNAX",
        "to": "platform1",
      },
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "1000.0000 SNAX",
        "to": "platform2",
      },
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "1000.0000 SNAX",
        "to": "testacc1",
      },
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "1000.0000 SNAX",
        "to": "testacc2",
      },
    ],
  },
]
`;

exports[`System should work correctly with delegatebw system after initialization 2`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "net_weight": "1000.0000 SNAX",
        "owner": "testacc1",
        "ram_bytes": 1018492,
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
]
`;

exports[`System should work correctly with delegatebw system after initialization 3`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "1000.0000 SNAX",
        "to": "platform1",
      },
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "1000.0000 SNAX",
        "to": "platform2",
      },
      Object {
        "cpu_weight": "1490.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "990.0000 SNAX",
        "to": "testacc1",
      },
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "1000.0000 SNAX",
        "to": "testacc2",
      },
    ],
  },
]
`;

exports[`System should work correctly with delegatebw system after initialization 4`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "1490.0000 SNAX",
        "net_weight": "990.0000 SNAX",
        "owner": "testacc1",
        "ram_bytes": 1018492,
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
]
`;

exports[`System should work correctly with delegatebw system after initialization 5`] = `
Array [
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "1000.0000 SNAX",
        "to": "platform1",
      },
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "1000.0000 SNAX",
        "to": "platform2",
      },
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "1000.0000 SNAX",
        "to": "testacc1",
      },
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "1000.0000 SNAX",
        "to": "testacc2",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
]
`;

exports[`System should work correctly with delegatebw system after initialization 6`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "net_weight": "1000.0000 SNAX",
        "owner": "testacc1",
        "ram_bytes": 1018492,
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "net_weight": "1000.0000 SNAX",
        "owner": "testacc2",
        "ram_bytes": 1018492,
      },
    ],
  },
]
`;

exports[`System should work correctly with delegatebw system after initialization 7`] = `"assertion failure with message: insufficient staked net bandwidth"`;

exports[`System should work correctly with delegatebw system after initialization 8`] = `"assertion failure with message: insufficient staked cpu bandwidth"`;

exports[`System should work correctly with delegatebw system after initialization 9`] = `"assertion failure with message: insufficient staked cpu bandwidth"`;

exports[`System should work correctly with delegatebw system after initialization 10`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "10.0000 SNAX",
        "from": "testacc1",
        "net_weight": "10.0000 SNAX",
        "to": "testacc1",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "1000.0000 SNAX",
        "to": "platform1",
      },
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "1000.0000 SNAX",
        "to": "platform2",
      },
      Object {
        "cpu_weight": "1390.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "880.0000 SNAX",
        "to": "testacc1",
      },
      Object {
        "cpu_weight": "1490.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "990.0000 SNAX",
        "to": "testacc2",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
]
`;

exports[`System should work correctly with delegatebw system after initialization 11`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "1400.0000 SNAX",
        "net_weight": "890.0000 SNAX",
        "owner": "testacc1",
        "ram_bytes": 1018492,
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "1400.0000 SNAX",
        "net_weight": "890.0000 SNAX",
        "owner": "testacc1",
        "ram_bytes": 1018492,
      },
    ],
  },
]
`;

exports[`System should work correctly with delegatebw system after initialization 12`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "10.0000 SNAX",
        "from": "testacc1",
        "net_weight": "10.0000 SNAX",
        "to": "testacc1",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "1000.0000 SNAX",
        "to": "platform1",
      },
      Object {
        "cpu_weight": "1500.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "1000.0000 SNAX",
        "to": "platform2",
      },
      Object {
        "cpu_weight": "1280.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "640.0000 SNAX",
        "to": "testacc1",
      },
      Object {
        "cpu_weight": "1490.0000 SNAX",
        "from": "snax.creator",
        "net_weight": "990.0000 SNAX",
        "to": "testacc2",
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
]
`;

exports[`System should work correctly with delegatebw system after initialization 13`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "1290.0000 SNAX",
        "net_weight": "650.0000 SNAX",
        "owner": "testacc1",
        "ram_bytes": 1018492,
      },
    ],
  },
  Object {
    "more": false,
    "rows": Array [],
  },
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "1290.0000 SNAX",
        "net_weight": "650.0000 SNAX",
        "owner": "testacc1",
        "ram_bytes": 1018492,
      },
    ],
  },
]
`;

exports[`System should work correctly with escrow system 1`] = `"assertion failure with message: cant unstake this amount for account at the moment"`;

exports[`System should work correctly with escrow system 2`] = `"assertion failure with message: cant unstake this amount for account at the moment"`;

exports[`System should work correctly with escrow system 3`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "11999999200.0000 SNAX",
        "from": "snax.team",
        "net_weight": "2999999800.0000 SNAX",
        "to": "snax.team",
      },
    ],
  },
]
`;

exports[`System should work correctly with escrow system 4`] = `
Array [
  Array [
    Object {
      "amount": "14999999000.0000 SNAX",
      "initial_amount": "14999999000.0000 SNAX",
      "owner": "snax.team",
      "period_count": 10,
    },
  ],
]
`;

exports[`System should work correctly with escrow system after initialization 1`] = `
Array [
  Object {
    "more": false,
    "rows": Array [
      Object {
        "cpu_weight": "11700199200.0000 SNAX",
        "from": "snax.team",
        "net_weight": "1800799800.0000 SNAX",
        "to": "snax.team",
      },
    ],
  },
]
`;

exports[`System should work correctly with escrow system after initialization 2`] = `
Array [
  Array [
    Object {
      "amount": "13500999000.0000 SNAX",
      "initial_amount": "14999999000.0000 SNAX",
      "owner": "snax.team",
      "period_count": 10,
    },
  ],
]
`;

exports[`System should work correctly with escrow system after initialization 3`] = `
Array [
  Array [
    Object {
      "amount": "20.0000 SNAX",
      "initial_amount": "20.0000 SNAX",
      "owner": "test.transf",
      "period_count": 10,
    },
  ],
]
`;
